# health-quantification

./: .env.example  .gitignore  AGENTS.md  README.md  ecosystem.config.cjs  pyproject.toml
HealthQuantification/HealthQuantification/: ContentView.swift  HealthKitDiagnosticsModel.swift  HealthQuantificationApp.swift
HealthQuantification/HealthQuantification.xcodeproj/: project.pbxproj
HealthQuantification/HealthQuantificationIOS/: ContentView.swift  HealthKitDiagnosticsModel.swift  HealthQuantificationIOSApp.swift  Info.plist
HealthQuantification/HealthQuantificationIOSTests/: HealthKitServiceTests.swift  IngestClientTests.swift
HealthQuantification/HealthQuantificationIOSUITests/: HealthQuantificationIOSUITests.swift  HealthQuantificationIOSUITestsLaunchTests.swift
HealthQuantification/HealthQuantificationTests/: HealthQuantificationTests.swift
HealthQuantification/HealthQuantificationUITests/: HealthQuantificationUITests.swift  HealthQuantificationUITestsLaunchTests.swift
docs/: first_time_ios_developer.md  prd.md  rfc.md  test.md  working.md
native/apple_health_exporter/: Info.plist  Package.swift  README.md
native/apple_health_exporter_app/: Info.plist  README.md
scripts/: apple_health_exporter  build_native_exporter.sh  build_native_exporter_app.sh  claude_code_hourly.py  gen_charts.py  gen_health_dashboard.py  health_quant  health_work_regression.py  open_native_exporter_app.sh  sleep_monthly_comparison.py  start_backend.sh
skills/: health_quantification.md
src/health_quantification/: cli.py  config.py  errors.py  models.py  server.py  (+1 more)
(+20 files in other folders)
