[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "health-quantification"
version = "0.1.0"
description = "AI-first personal health quantification toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]

[project.scripts]
health-quant = "health_quantification.cli:main"

[tool.pytest.ini_options]
markers = [
  "live_integration: tests that hit real health data sources or native adapters",
]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
